cmake_minimum_required(VERSION 3.10.3)
project(moveit_tutorials)

# Common cmake code applied to all moveit packages
find_package(moveit_common REQUIRED)
moveit_package()

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
# find_package(interactive_markers REQUIRED)
find_package(moveit_core REQUIRED)
find_package(moveit_ros_planning REQUIRED)
find_package(moveit_ros_planning_interface REQUIRED)
find_package(moveit_ros_perception REQUIRED)
# find_package(rviz_visual_tools REQUIRED)
# find_package(moveit_visual_tools REQUIRED)
# find_package(pluginlib REQUIRED)
find_package(geometric_shapes REQUIRED)
# find_package(pcl_ros REQUIRED)
find_package(pcl_conversions REQUIRED)
# find_package(rosbag2 REQUIRED)
find_package(tf2_ros REQUIRED)
# find_package(tf2_eigen REQUIRED)
# find_package(tf2_geometry_msgs REQUIRED)
find_package(Eigen3 REQUIRED)
# find_package(Boost REQUIRED system filesystem date_time thread)
find_package(PCL REQUIRED)
find_package(ament_index_cpp REQUIRED)

# set(THIS_PACKAGE_INCLUDE_DIRS
#   doc/interactivity/include
# )

# include_directories(${THIS_PACKAGE_INCLUDE_DIRS})
include_directories(${PCL_INCLUDE_DIRS} ${pcl_conversions_INCLUDE_DIRS})

# add_subdirectory(doc/controller_configuration)
# add_subdirectory(doc/hand_eye_calibration)
# add_subdirectory(doc/interactivity)
# add_subdirectory(doc/kinematics)
# add_subdirectory(doc/motion_planning_api)
# add_subdirectory(doc/motion_planning_pipeline)
# add_subdirectory(doc/move_group_interface)
# add_subdirectory(doc/move_group_python_interface)
add_subdirectory(doc/perception_pipeline)
# add_subdirectory(doc/pick_place)
# add_subdirectory(doc/planning)
# add_subdirectory(doc/planning_scene)
# add_subdirectory(doc/planning_scene_ros_api)
# add_subdirectory(doc/robot_model_and_robot_state)
# add_subdirectory(doc/state_display)
# add_subdirectory(doc/subframes)
# add_subdirectory(doc/tests)
# add_subdirectory(doc/trajopt_planner)
# add_subdirectory(doc/creating_moveit_plugins/lerp_motion_planner)
# add_subdirectory(doc/moveit_cpp)
# add_subdirectory(doc/collision_environments)
# add_subdirectory(doc/visualizing_collisions)
# add_subdirectory(doc/bullet_collision_checker)

ament_package()
